--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "A lightweight date utility library",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
-  "exports":{
-    ".":{
+  "type": "module",
+  "exports": {
+    ".": {
       "import": "./dist/index.esm.js",
       "require": "./dist/index.cjs.js"
     }
@@ -21,7 +22,13 @@
     "@rollup/plugin-commonjs": "^29.0.0",
     "@rollup/plugin-node-resolve": "^16.0.3",
     "@rollup/plugin-terser": "^0.4.4",
-    "rollup": "^4.53.1"
+    "@rollup/plugin-typescript": "^12.3.0",
+    "@types/node": "^24.10.0",
+    "rollup": "^4.53.1",
+    "tslib": "^2.8.1",
+    "typescript": "^5.9.3"
   },
-  "files": ["dist"]
+  "files": [
+    "dist"
+  ]
 }
